--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </div>
 
-      <div class="toast-container"></div>
+      <div class="toast-container hidden"></div>
     </div>
   </body>
 </html>
